middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: hello-world-strip
spec:
  stripPrefix:
    prefixes:
      - /hello-world
