deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-app
  labels:
    app: hello-world-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-world-app
  template:
    metadata:
      labels:
        app: hello-world-app
    spec:
      imagePullSecrets:
        - name: nexus-registry

      containers:
        - name: hello-world-app
          image: 0.0.0.0:8083/docker-hosted-vps/springboot-app-ci:TAG
          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 8080

          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
