service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-app
  labels:
    app: hello-world-app
spec:
  type: ClusterIP
  selector:
    app: hello-world-app
  ports:
    - name: http
      port: 8085
      targetPort: 8080
      nodePort: 8085
