ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hhello-world-app
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: hello-world-app@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: carlosmoretti.com.br
      http:
        paths:
          - path: /hello-world
            pathType: Prefix
            backend:
              service:
                name: hello-world-app
                port:
                  number: 8085
